[package]
name = "polypath-dal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
polypathroute-core = { path = "../polypathroute-core"}
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.145"
tokio.workspace = true
