[package]
name = "polypath-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
dashmap = "6.1.0"
rayon = "1.11.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.145"
tokio = { workspace = true, features = ["sync"] }
